[package]
name = "streamlink-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
dirs = "5"
